# cloudai-fusion

./: .codecov.yml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yml  ADOPTERS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CloudAI_Fusion_组会汇报.pptx  GOVERNANCE.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  _fullbuild.txt  cliff.toml  cloudai-fusion.yaml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  go.mod  go.sum  start.bat  start.sh
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: canary.yml  ci.yml  devsecops.yml  moat.yml  pipeline.yml  release.yml
ai/: pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-tf.txt  requirements-torch.txt  requirements.txt  tracing.py
ai/agents/: __init__.py  fine_tuning.py  llm_client.py  operations_agent.py  server.py
ai/anomaly/: __init__.py  deep_detector.py  detector.py
ai/config/: training.yaml
ai/scheduler/: __init__.py  advanced_trainer.py  provenance.py  train.py
ai/tests/: test_anomaly.py  test_llm_client.py  test_operations_agent.py  test_provenance.py  test_scheduler.py  test_server.py
api/: openapi.yaml
cmd/agent/: main.go  main_test.go
cmd/apiserver/: main.go  main_test.go
cmd/cafctl/: completeness_test.go  deploy_test.go  edge_test.go  failover_test.go  isolation_test.go  main.go  main_test.go  proofs_test.go  (+4 more)
docker/: Dockerfile.agent  Dockerfile.ai  Dockerfile.ai.gpu  Dockerfile.apiserver  Dockerfile.scheduler
docs/: api-guide.md  architecture.md  best-practices.md  operations-guide.md  quickstart.md  redteam-subsystem-spec.md  troubleshooting.md  user-manual.md  verifiable-moat-spec.md
examples/: aiops-operations.yaml  e2e-ml-pipeline.yaml  edge-deployment.yaml  enterprise-features.json  finops-cost-policy.yaml  gpu-training-pod.yaml  inference-service.json  multi-tenant-config.yaml  plugin-manifest.yaml  security-policy.json  training-job.json
scripts/: deploy-cloud.sh  diagnose.bat  diagnose.sh  env-generate.bat  env-generate.sh  init-db.sql  setup-gpu.bat  setup-gpu.sh
(+435 files in other folders)
